# Document-Assistant

./: .gitignore  README.md  chat-request-audit.json  chat-request-kb-v2.json  chat-request-kb.json  chat-request.json  diary.txt  docker-compose.ragflow-integration.yml  sample-embedding-verify-v2.txt  sample-embedding-verify.txt
D_ass/: .env  .env.example  (+6 more)
ragflow_integration_service/: .env  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
ragflow_integration_service/app/: main.py
ragflow_integration_service/app/adapters/ragflow/: anti_corruption.py  client.py  config_adapter.py  conversation_adapter.py  identity.py  knowledge_base_adapter.py  mappers.py  prompt_config_mapper.py  reference_alignment.py  session_naming.py
ragflow_integration_service/app/api/: dependencies.py  schemas.py
ragflow_integration_service/app/application/: conversation_service.py  knowledge_base_service.py
ragflow_integration_service/app/core/: config.py  constants.py  default_chat_agent.py
ragflow_integration_service/app/dto/: commands.py  results.py
ragflow_integration_service/app/ports/: conversation.py  knowledge_base.py
ragflow_integration_service/app/ragflow_integration_service.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
ragflow_integration_service/config/: default_chat_agent.json
ragflow_integration_service/tests/: run_reference_alignment.py  test_auth_dependencies.py  test_auth_routes.py  test_knowledge_file_content_route.py  test_ragflow_chat_config_update.py  test_ragflow_session_creation.py  test_reference_alignment.py
(+62 files in other folders)
